# projeto-pontos-tmw

./: README.md  pyproject.toml
Projeto Pontos/: model_train.py  modelo_rf.pkl  train.py
