[tool.poetry]
name = "projeto-pontos"
version = "0.1.0"
description = ""
authors = ["Artur Silva <artur.santana96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
feature-engine = "^1.8.1"
scikit-plot = "^0.3.7"
scipy = "^1.14.1"
mljar-scikit-plot = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
